@@ -192,51 +192,6 @@ namespace comexbase
 		
 		
 		
-
-		/*
-		/// <summary>
-		/// Close PCSC communication
-		/// </summary>
-		private static void ClosePCSC()
-		{
-			try
-			{
-				PCSC.Disconnect();
-				PCSC.ReleaseContext();
-			}
-			catch (Exception Ex)
-			{
-				log.Warn(Ex.GetType().ToString() + ": " + Ex.Message);
-			}
-		}
-
-		
-		
-		
-		
-		
-		/// <summary>
-		/// Create context to use pcsc
-		/// </summary>
-		private static string InitPCSC()
-		{
-			PCSC = new Pcsc();
-			try
-			{
-				PCSC.EstablishContext();
-			}
-			catch (Exception Ex)
-			{
-			  	log.Warn(Ex.GetType().ToString() + ": " + Ex.Message);
-				return Ex.GetType().ToString() + ": " + Ex.Message;
-			}
-			
-			return "";
-		}
-
-		
-		*/
-		
 		
 		
 		/// <summary>
@@ -260,59 +215,6 @@ namespace comexbase
 		
 		
 		
-/*
-		/// <summary>
-		/// Detect available serial ports
-		/// </summary>
-		private static void FillSerialPorts()
-		{
-			SerialPortsName = new List<string>(System.IO.Ports.SerialPort.GetPortNames());
-		}
-		
-		
-		
-		
-		
-		/// <summary>
-		/// Detect available pcsc readers
-		/// </summary>
-		private static string FillPcscReaders()
-		{
-			PCSC_Readers = new List<string>();
-			
-			// create new PCSC manager and create context
-			string retStr = InitPCSC();
-			
-			if (retStr != "")
-			{
-				// error detected
-				log.Error(retStr);
-				return retStr;
-			}
-			else
-			{
-				// retrieve pcsc readers
-				string[] pcsc_readers = new string[0];
-				
-				retStr = PCSC.ListReaders(out pcsc_readers);			
-				
-				if (retStr != "")
-				{
-					// error detected
-					log.Error(retStr);
-					return retStr;
-				}
-				else
-				{
-					PCSC_Readers = new List<string>(pcsc_readers);
-				}
-			}
-			
-			ClosePCSC();
-			return "";
-		}
-		*/
-		
 		
 		
 		
@@ -331,115 +233,6 @@ namespace comexbase
 			return outStr.Trim();
 		}
 		
-		
-/*		
-		
-		
-		/// <summary>
-		/// Perform ISOIN command using SmartMouse reader
-		/// </summary>
-		private static string ISOIN(string command, ref string response)
-		{
-					
-			// Write header
-			SMouse.FlushBuffers();
-			ret = SMouse.WriteData(command.Substring(0,10));
-	
-			if (ret != "")
-			{
-				// error detected						
-				return ret;
-			}
-			
-			
-			// Read knowledge
-			ret = SMouse.ReadData(SerialSettings.ReadTimeout, out response);
-
-			if (ret != "")
-			{
-				// error detected						
-				return ret;
-			}
-	
-			// check for right knowledge			
-			if (response != command.Substring(0,10) + command.Substring(2,2))
-			{
-				// wrong command header			
-				return response;
-			}
-			
-			// write command data
-			SMouse.FlushBuffers();
-			ret = SMouse.WriteData(command.Substring(10));					
-	
-			if (ret != "")
-			{
-				// error detected						
-				return ret;
-			}
-	
-			ret = SMouse.ReadData(SerialSettings.ReadTimeout, out response);				
-	
-			if (ret != "")
-			{
-				// error detected						
-				return ret;
-			}
-			
-			// check for command part in response
-			if (response.IndexOf(command.Substring(10)) == 0)
-			{
-				// remove command part from response
-				response = response.Substring(command.Substring(10).Length);
-			}
-			
-			return "";
-		}
-		
-		
-		
-		
-		
-		
-		/// <summary>
-		/// Perform ISOOUT command using SmartMouse reader
-		/// </summary>
-		private static string ISOOUT(string command, ref string response)
-		{
-					
-			// Write command
-			SMouse.FlushBuffers();
-			ret = SMouse.WriteData(command);
-	
-			if (ret != "")
-			{
-				// error detected						
-				return ret;
-			}
-			
-			
-			// Read response
-			ret = SMouse.ReadData(SerialSettings.ReadTimeout, out response);
-
-			if (ret != "")
-			{
-				// error detected						
-				return ret;
-			}
-			
-			// check for command part in response
-			if (response.IndexOf(command + command.Substring(2,2)) == 0)
-			{
-				// remove command part from response
-				response = response.Substring(command.Length + 2);
-			}
-			
-			return "";
-		}
-		
-		
-		
-		*/
 		
 		
 		
